Prevent border occlusion when title wraps

--- a/app/src/components/TalkPane.scss
+++ b/app/src/components/TalkPane.scss
@@ -12,7 +12,7 @@
 
   .talk-title {
     font-size: 4.5em;
-    line-height: 1em;
+    line-height: 1.35em;
     margin-top: 10px;
     a {
       color: #464646;
